[project]
name = "pycamt"
version = "0.1.0"
description = "Camt053Parser is a flexible and extensible Python class designed to parse CAMT.053 XML files, which are used for bank-to-customer account report messages in the financial industry. The parser supports multiple versions of the CAMT.053 standard, making it a versatile tool for extracting financial transaction data."
authors = [
  { name = "Olivier D'Ancona", email = "folivier_dancona@hotmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
dependencies = ["lxml>=6.0.2"]

[project.urls]
Homepage = "https://github.com/ODAncona/pycamt"
Documentation = "https://ODAncona.github.io/pycamt/"
Repository = "https://github.com/ODAncona/pycamt"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=6.0.0",
  "deptry>=0.23.0",
  "pre-commit>=4.0.0",
  "tox-uv>=1.29.0",
  "ipykernel>=6.29.0",
  "ruff>=0.9.0",
]

docs = ["mkdocs>=1.6", "mkdocs-material>=9.7", "mkdocstrings[python]>=0.23"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pycamt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pycamt"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
